--- a/node-app/public/pages/home.html
+++ b/node-app/public/pages/home.html
@@ -10,7 +10,7 @@
      <body>
          <h1>Home Page</h1>
          <form action="home" method="post">
-         <table>
+         <table class="">
                <tr>
                    <th>Sno</th>
                    <td><input type="text" name="sno"></td>
@@ -31,5 +31,6 @@
             </tr>
          </table>
         </form>
+        <iframe src="people" style="height:1000px ;width: 1000px; "></iframe>
     </body>
 </html>
